--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <h1>
-	The Great
+	Color game
 	<br>
 	<span id="colorDisplay">RGB</span>
 	<br>
-	Color Game
+	Guess the color..
 </h1>
 
 <div id="stripe">
